home-media-viewer/src/styles/hmv.module.scss
$appBackgroundColor: rgb(45, 150, 73);
$appBorderColor: #1b5a2b;
$appBackgroundAlternative: white;
$appTextColor: white;
$appTextColorAlternative: #2d9649;

.pageHeader {
    width: 100%;
    height: 60px;
    display: flex;
    flex-flow: row nowrap;
    background-color: $appBackgroundColor;

    .mainMenu {
        .mainMenuToggle {
            display: none;
            font-size: 35px;
            font-weight: bold;
            color: $appTextColor
        }

        .mainMenuElements {  
            display: flex;
            flex-flow: row nowrap;
            height: 100%;
        }

        .linkItem {
            padding: 5px;
            border: $appBorderColor 1px solid;
            border-radius: 15px;
            margin-right: 10px;
            margin-left: 10px;
            background-color: $appBackgroundAlternative;
            color: $appTextColorAlternative;
            font-size: x-large;
            align-self: center;
        }

        .activeLinkItem {
            background-color: $appTextColorAlternative;
            color: $appBackgroundAlternative;
        }
    }

    .titleArea {
        flex-grow: 1;
        text-align: center;
        align-self: center;

        .title {
            color: $appTextColor;
            align-content: right;
            font-size: xx-large;
        }

        .titleMobile {
            display: none;
        }
    }
}

.pageBody {
    flex-grow: 1;
    width: 100%;
}

.pageFooter {
    height: 25px;
    width: 100%;
    padding: 2px;
    background-color: $appBackgroundColor;
    color: $appTextColor;
}

.navigationBar {
    display: flex;
    flex-flow: row nowrap;
    justify-content: space-between;
    padding: 5px;
    width: 100%;

    .leftSide {
        display: flex;
        flex-flow: row wrap;
    }

    .rightSide {
        display: flex;
        flex-flow: row wrap;
        justify-content: flex-end;
    }

    > div > * {
        display: inline-block;
        height: 38px;
        padding: 10px;
        border: $appBorderColor 1px solid;
        border-radius: 15px;
        background-color: $appBackgroundAlternative;
        color: $appTextColorAlternative;
        margin: 5px 10px 5px 10px;
    }

    button {
        align-self: flex-end;
    }
}

.roundBorderedContainer {
    margin: 10px;
    border-radius: 15px;
    border: 1px solid $appBorderColor;
    background-color: $appBackgroundAlternative;
    padding: 10px;
}

.contentsContainer {
    display: flex;
    flex-flow: row wrap;
    justify-content: space-between;
    width: 100%;
}

.albumCardContainer {
    cursor: pointer;

    .contentName {
        font-size: large;
    }
}

.contentCardContainer {
    margin: 15px;
    padding: 5px;
    border-radius: 15px;
    border: 1px solid $appBorderColor;
    background-color: $appBackgroundAlternative;
    flex-grow: 1;
    display: flex;
    flex-flow: column nowrap;
    justify-content: space-between;
    height: 250px;
    min-width: 300px;

    .contentName {
        width: 100%;
        text-align: center;
        padding: 3px;
        font-weight: bold;

        abbr[title] {
            text-decoration: none;
        }
    }

    .noDetails {
        .imageContainer {
            width: 100%;
        }
    }

    .contentDataContainer {
        display: flex;
        flex-flow: row nowrap;
        justify-content: center;
        flex-grow: 1;
    }

    .contentDetails {
        font-size: small;
        flex-grow: 1;
        max-width: 45%;
        text-wrap: wrap;

        ul {
            list-style: none;
        }
    }

    .imageContainer {
        width: 100%;
        height: 100%;
        position: relative;

        .thumbnailImage {
            width: 100%;
            height: 100%;
            object-fit: contain;
            position: absolute;
            top: 0px;
            bottom: 0px;
            left: 0px;
            right: 0px;
            display: block;
        }

        .metadataContainer {
            position: absolute;
            bottom: 0px;
            width: 100%;
            display: flex;
            flex-flow: row wrap;
            gap: 10px;

            > div {
                padding: 4px;
                height: 30px;
                border-radius: 10px;
                font-weight: normal;
                color: $appTextColor;
                background-color: $appBackgroundColor;
            }
        }
    }
}

.contentDisplayContainer {
    position: fixed;
    top: 0px;
    left: 0px;
    width: 100%;
    height: 100%;
    background-color: rgba(gray, 0.7);
    z-index: 99;

    .closeButton {
        position: absolute;
        top: 0px;
        right: 0px;
        width: 60px;
        height: 60px;
        z-index: 100;
        text-align: center;
        font-size: 48px;
        color: white;
        background-color: rgba(0, 0, 0, 0.3);
        border: 1px white solid;
        border-radius: 30px;
        padding: 3px;
        cursor: pointer;
    }

    .contentWrapper {
        width: 100%;
        height: 100%;

        img, video {
            object-fit: contain;
            width: 100%;
            height: 100%;
        }
    }

    .navigationArea {
        position: fixed;
        display: flex;
        flex-direction: column;
        flex-wrap: wrap;
        justify-content: center;
        align-items: center;
        top: 50%;
        bottom: 20vh;
        margin: -2.5rem 1rem;
        z-index: 100;
        width: 5rem;
        height: 5rem;
        border: 2px solid $appBorderColor;
        border-radius: 2.5rem;
        cursor: pointer;

        > div {
            font-size: 5rem;
            font-weight: bold;
            color: $appTextColorAlternative;
            border-radius: 3rem;
        }
    }

    .previousContainer {
        left: 0px;
    }

    .nextContainer {
        right: 0px;
    }
}
/* ... */

